Prevent scrollbars showing up on the edit view

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -660,6 +660,7 @@ h2 {
   bottom: 0px;
   left: 0px;
   right: 0px;
+  overflow: hidden;
 }
 
 /* Rules for the changeset list shown by the history tab etc */
